--- a/index.html
+++ b/index.html
@@ -1,69 +1,173 @@
-<!-- =======================
-     WHY INVEST SECTION
-     ======================== -->
-<section class="why-invest-section">
-    <div class="container">
-        <h2>Why invest in Cape Verde?</h2>
-        <p class="section-subtitle">
-            Cape Verde has an attractive and investment-friendly business environment, with several strategic advantages that strengthen investor confidence:
-        </p>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Investir em Cabo Verde | Guia do Investidor da Diáspora</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
-        <div class="reasons-grid">
-            <!-- Item 1: Strategic Location -->
-            <div class="reason-item">
-                <img src="./images/icon-location.svg" alt="Strategic Location Icon">
-                <h3>Strategic Location</h3>
-                <p>Located at the intersection between Europe, Africa and America, Cape Verde is a connection point for international trade and business.</p>
-            </div>
+    <!-- =======================
+    HEADER & NAVIGATION
+    ======================== -->
+    <header class="site-header">
+        <div class="container">
+            <nav class="main-nav">
+                <a href="#" class="logo">Investidor da Diáspora</a>
+                <ul class="nav-links">
+                    <li><a href="#why-invest">Porquê Investir</a></li>
+                    <li><a href="#opportunities">Oportunidades</a></li>
+                    <li><a href="#how-to-invest">Como Investir</a></li>
+                    <li><a href="#download">Download</a></li>
+                </ul>
+                <div class="hamburger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </div>
+    </header>
 
-            <!-- Item 2: Political Stability -->
-            <div class="reason-item">
-                <img src="./images/icon-stability.svg" alt="Political and Social Stability Icon">
-                <h3>Political and Social Stability</h3>
-                <p>The country is recognized for its consolidated democracy, social peace and stable governance, fundamental factors for investment security.</p>
+    <main>
+        <!-- =======================
+        HERO SECTION
+        ======================== -->
+        <section class="hero" id="hero">
+            <div class="hero-content fade-in">
+                <h1>ÉS MEMBRO DA DIÁSPORA CABO-VERDIANA E GOSTARIAS DE CONHECER AS MELHORES OPORTUNIDADES DE INVESTIMENTO EM CABO VERDE?</h1>
+                <p>O "Guia do Investidor da Diáspora" visa encorajar os membros da diáspora cabo-verdiana a investir no seu país de origem, contribuindo para o crescimento económico sustentável e a criação de empregos de qualidade.</p>
+                <a href="#download" class="cta-button">Fazer Download do Guia</a>
             </div>
+        </section>
 
-            <!-- Item 3: Modern Infrastructures -->
-            <div class="reason-item">
-                <img src="./images/icon-infra.svg" alt="Modern Infrastructures Icon">
-                <h3>Modern Infrastructures</h3>
-                <p>Continuous investments in ports, airports, roads and energy networks ensure good conditions for business development.</p>
+        <!-- =======================
+        WHY INVEST SECTION
+        ======================== -->
+        <section class="info-section" id="why-invest">
+            <div class="container">
+                <h2 class="fade-in">Porquê investir em Cabo Verde?</h2>
+                <p class="section-subtitle fade-in">Cabo Verde tem um ambiente de negócios atrativo e propício ao investimento, com diversas vantagens estratégicas que fortalecem a confiança dos investidores:</p>
+                <div class="reasons-grid">
+                    <!-- Added .fade-in to each item for animation -->
+                    <div class="reason-item fade-in"><img src="./images/icon-location.svg" alt="Ícone"><h3>Localização Estratégica</h3><p>Situado no cruzamento entre Europa, África e América, é um ponto de conexão para comércio internacional.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-stability.svg" alt="Ícone"><h3>Estabilidade Política e Social</h3><p>O país é reconhecido pela sua democracia consolidada, paz social e governança estável.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-infra.svg" alt="Ícone"><h3>Infraestruturas Modernas</h3><p>Investimentos contínuos em portos, aeroportos, estradas e redes energéticas.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-euro.svg" alt="Ícone"><h3>Paridade com o Euro</h3><p>A moeda nacional (Escudo) está indexada ao Euro, proporcionando estabilidade cambial.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-climate.svg" alt="Ícone"><h3>Clima Estável e Sem Riscos de Saúde</h3><p>Clima tropical moderado e estável, sem registro de epidemias ou riscos significativos.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-capital.svg" alt="Ícone"><h3>Livre Movimentação de Capitais</h3><p>Políticas económicas permitem a transferência de fundos e repatriação de capitais sem restrições.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-law.svg" alt="Ícone"><h3>Estado de Direito e Transparência</h3><p>Forte compromisso com o Estado de Direito, promovendo um ambiente seguro e previsível.</p></div>
+                    <div class="reason-item fade-in"><img src="./images/icon-population.svg" alt="Ícone"><h3>População Jovem e Qualificada</h3><p>População jovem e capacitada, com crescente qualificação técnica e profissional.</p></div>
+                </div>
             </div>
+        </section>
 
-            <!-- Item 4: Parity with the Euro -->
-            <div class="reason-item">
-                <img src="./images/icon-euro.svg" alt="Parity with the Euro Icon">
-                <h3>Parity with the Euro</h3>
-                <p>The national currency (Cape Verdean Escudo) is indexed to the Euro, providing exchange rate stability for foreign investors.</p>
+        <!-- =======================
+        OPPORTUNITIES SECTION
+        ======================== -->
+        <section class="info-section alternate-bg" id="opportunities">
+            <div class="container">
+                <h2 class="fade-in">Oportunidades de Negócio</h2>
+                <div class="opportunities-grid">
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/agronegocio.jpg');"><div class="card-overlay"><h3>Agronegócio</h3><p>Produção agrícola, criação de gado e produção de alimentos.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/industria.jpg');"><div class="card-overlay"><h3>Indústria</h3><p>Transformação de produtos alimentares, produção de bebidas e têxteis.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-digital.jpg');"><div class="card-overlay"><h3>Economia Digital</h3><p>Startups tecnológicas, serviços de TI e inovação digital.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/turismo.jpg');"><div class="card-overlay"><h3>Turismo</h3><p>Desenvolvimento de hotéis, ecoturismo, turismo cultural e de saúde.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-verde.jpg');"><div class="card-overlay"><h3>Economia Verde</h3><p>Energias renováveis, gestão de resíduos e conservação ambiental.</p></div></a>
+                    <a href="#" class="opportunity-card fade-in" style="background-image: url('./images/economia-azul.jpg');"><div class="card-overlay"><h3>Economia Azul</h3><p>Investimentos na pesca, aquacultura, e turismo marítimo.</p></div></a>
+                </div>
             </div>
+        </section>
 
-            <!-- Item 5: Stable Climate -->
-            <div class="reason-item">
-                <img src="./images/icon-climate.svg" alt="Stable Climate Icon">
-                <h3>Stable Climate and No Health Risks</h3>
-                <p>Cape Verde has a moderate and stable tropical climate throughout the year, with no records of epidemics or significant risks to public health.</p>
+        <!-- =======================
+        HOW TO INVEST SECTION
+        ======================== -->
+        <section class="info-section" id="how-to-invest">
+            <div class="container content-split">
+                <div class="text-content fade-in">
+                    <h2>Como Investir?</h2>
+                    <p>Para investir em Cabo Verde, siga estes passos:</p>
+                    <ol class="steps-list">
+                        <li><strong>Preparação:</strong> Pesquisar oportunidades e entender o mercado.</li>
+                        <li><strong>Planejamento:</strong> Desenvolver um plano de negócios detalhado.</li>
+                        <li><strong>Registro:</strong> Registrar a empresa e obter as licenças necessárias.</li>
+                        <li><strong>Financiamento:</strong> Explorar opções, incentivos fiscais e subsídios.</li>
+                        <li><strong>Execução:</strong> Implementar o plano, contratar pessoal e iniciar operações.</li>
+                        <li><strong>Suporte Continuado:</strong> Utilizar serviços de apoio como a Cabo Verde TradeInvest.</li>
+                    </ol>
+                </div>
+                <div class="image-collage fade-in">
+                    <img src="./images/how-to-1.jpg" alt="Paisagem"><img src="./images/how-to-2.jpg" alt="Praia"><img src="./images/how-to-3.jpg" alt="Caminhada">
+                </div>
             </div>
+        </section>
 
-            <!-- Item 6: Free Movement of Capital -->
-            <div class="reason-item">
-                <img src="./images/icon-capital.svg" alt="Free Movement of Capital Icon">
-                <h3>Free Movement of Capital</h3>
-                <p>Economic policies allow the transfer of funds and repatriation of capital without restrictions, favoring international investments.</p>
+        <!-- =======================
+        DOWNLOAD SECTION
+        ======================== -->
+        <section class="info-section alternate-bg" id="download">
+            <div class="container content-split">
+                <div class="text-content fade-in">
+                    <h2>Download</h2>
+                    <p>Faça o download do "Guia do Investidor da Diáspora" para obter todas as informações necessárias para iniciar o seu investimento em Cabo Verde.</p>
+                    <div class="download-buttons">
+                        <button class="download-btn" data-lang="pt">Português</button>
+                        <button class="download-btn" data-lang="en">English</button>
+                        <button class="download-btn" data-lang="fr">French</button>
+                    </div>
+                </div>
+                <div class="image-content fade-in">
+                    <img src="./images/download-cover.jpg" alt="Capa do Guia">
+                </div>
             </div>
+        </section>
 
-            <!-- Item 7: Rule of Law -->
-            <div class="reason-item">
-                <img src="./images/icon-law.svg" alt="Rule of Law Icon">
-                <h3>Rule of Law and Transparency</h3>
-                <p>The country maintains a strong commitment to the Rule of Law, promoting a safe and predictable environment for business.</p>
+        <!-- =======================
+        PARTNERS SECTION
+        ======================== -->
+        <section class="info-section" id="partners">
+            <div class="container">
+                <h2 class="fade-in">Nossos Parceiros</h2>
+                <div class="partners-logos fade-in">
+                    <img src="./images/logo-partner-1.png" alt="Logo"><img src="./images/logo-partner-2.png" alt="Logo"><img src="./images/logo-partner-3.png" alt="Logo"><img src="./images/logo-partner-4.png" alt="Logo"><img src="./images/logo-partner-5.png" alt="Logo">
+                </div>
             </div>
+        </section>
+    </main>
 
-            <!-- Item 8: Young Population -->
-            <div class="reason-item">
-                <img src="./images/icon-population.svg" alt="Young Population Icon">
-                <h3>Young and Qualified Population</h3>
-                <p>Cape Verde has a young and trained population, with growing technical and professional qualification, making it an attraction for innovative and technological sectors.</p>
-            </div>
+    <!-- =======================
+    FOOTER
+    ======================== -->
+    <footer class="site-footer-bottom">
+        <div class="container">
+            <p>© 2024 Investidor da Diáspora. Todos os direitos reservados.</p>
+            <p>Precisa de ajuda? <a href="mailto:contato@investidordadiaspora.cv">contato@investidordadiaspora.cv</a></p>
+        </div>
+    </footer>
+
+    <!-- =======================
+    DOWNLOAD MODAL (Hidden by default)
+    ======================== -->
+    <div id="downloadModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">×</span>
+            <h3>Download do Guia</h3>
+            <p>Por favor, insira o seu email para receber o link para download.</p>
+            <form id="downloadForm">
+                <input type="email" id="emailInput" placeholder="seu.email@exemplo.com" required>
+                <input type="hidden" id="langInput" value="">
+                <button type="submit">Receber o Guia</button>
+            </form>
+            <p id="formMessage" class="form-message"></p>
         </div>
     </div>
-</section>
+    
+    <!-- Link to the JavaScript file -->
+    <script src="script.js"></script>
+
+</body>
+</html>
